@startuml

FlyBehavior <|-- FlyWithWings
FlyBehavior <|-- FlyNoWay

abstract class FlyBehavior{
 {abstract} fly()
}

FlyBehavior --* Duck

Duck <|-- MallardDuck
Duck <|-- RedheadDuck
Duck <|-- RubberDuck
Duck <|-- DecoyDuck

class Duck {
  FlyBehavior flyBehavior
  setFlyBehavior()
  fly()
  quack()
  swim()

  {abstract} display()
}

class MallardDuck {
  display()
}

class RedheadDuck {
  display()
}

class RubberDuck {
  display()
}

class DecoyDuck {
  display()
}
@endluml
